# bb-cli

./: .gitignore  README.md  coverage.xml  docker-compose.yml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: python-package.yml
bb_cli/: bb_cli.py  bitbucket.py  cli.py  clone.py  config.py  custom_types.py  git.py  init.py  main.py  pull_request.py
testing/: git.py  mock_requests.py  os_utils.py
testing/resources/: fake_config.yml
testing/resources/bitbucket_server/: fake_proj_repos.json
tests/: bitbucket_test.py  config_test.py  conftest.py  git_test.py  init_test.py  main_test.py  pull_request_test.py  test_bitbucket.py  test_init.py
