[metadata]
name = bb_cli
version = 1.0.0
description = BitBucket command line interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinbaklid/bb
author = Martin Baklid
author_email = martinbaklid@hey.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PyYAML
    click
    mypy-extensions
    requests
python_requires = >=3.6

[options.entry_points]
console_scripts =
    bb-cli = bb_cli.main:main

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
